# ros_tutorials

catkin_workspace/.metadata/: version.ini
catkin_workspace/.metadata/.plugins/org.eclipse.cdt.core/: build.1461089906160.pdom
catkin_workspace/.metadata/.plugins/org.eclipse.cdt.make.core/: build.sc
catkin_workspace/.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
catkin_workspace/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
catkin_workspace/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
catkin_workspace/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
catkin_workspace/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/: server-config.json
catkin_workspace/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
catkin_workspace/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
catkin_workspace/devel/: .catkin  .rosinstall  setup.sh
catkin_workspace/devel/include/beginner_tutorials/: AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h
catkin_workspace/devel/lib/beginner_tutorials/: listener  talker
catkin_workspace/devel/lib/pkgconfig/: beginner_tutorials.pc
catkin_workspace/devel/share/beginner_tutorials/cmake/: beginner_tutorials-msg-paths.cmake  beginner_tutorialsConfig.cmake
catkin_workspace/src/beginner_tutorials/: CMakeLists.txt  package.xml  package.xml~
catkin_workspace/src/beginner_tutorials/src/: listener.cpp  talker.cpp
(+5 files in other folders)
